// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BbCodePresenter parser parseTextToNodeTree with correct message should create expected object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "wrong/url.png",
          "key": 2,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 1,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 4,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://correct.url/content.png",
          "key": 6,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 5,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 8,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "https://correct.url/content.png",
          "key": 11,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 10,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 13,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "Link",
          "key": 16,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 15,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 18,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "https://path.to/some/image.png",
              "key": 21,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 20,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
      ],
      "content": "",
      "key": 19,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 24,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 26,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "red text",
              "key": 28,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 27,
          "options": "red",
          "parentNode": [Circular],
          "type": "color",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 30,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag 21",
              "key": 32,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 31,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 34,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in u tag",
              "key": 36,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 35,
          "options": undefined,
          "parentNode": [Circular],
          "type": "u",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 38,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 40,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag",
              "key": 42,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 41,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 44,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 25,
      "options": undefined,
      "parentNode": [Circular],
      "type": "U",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 46,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "some text[b]with other bbCodes[/b] in code tag",
          "key": 48,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 47,
      "options": "kto",
      "parentNode": [Circular],
      "type": "code",
    },
    Object {
      "children": Array [],
      "content": " text",
      "key": 50,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 51,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 53,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/e.gif",
          "key": 55,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 56,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/7.gif",
          "key": 58,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 59,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/c.gif",
          "key": 61,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 62,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/3.gif",
          "key": 64,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 54,
      "options": undefined,
      "parentNode": [Circular],
      "type": "img",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 66,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/2015/0.png",
          "key": 68,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 69,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/2015/0.gif ",
          "key": 71,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 67,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": " quote ",
          "key": 74,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": " and subQuote ",
              "key": 76,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "with ",
                  "key": 78,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "content": "some",
                      "key": 80,
                      "options": undefined,
                      "parentNode": [Circular],
                      "type": "textline",
                    },
                  ],
                  "content": "",
                  "key": 79,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "u",
                },
                Object {
                  "children": Array [],
                  "content": "tags",
                  "key": 82,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 77,
              "options": undefined,
              "parentNode": [Circular],
              "type": "i",
            },
            Object {
              "children": Array [],
              "content": " param",
              "key": 84,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 75,
          "options": "kto",
          "parentNode": [Circular],
          "type": "quote",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 86,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "some",
              "key": 88,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "other",
                  "key": 90,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 89,
              "options": undefined,
              "parentNode": [Circular],
              "type": "i",
            },
            Object {
              "children": Array [],
              "content": "text",
              "key": 92,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 87,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " with tags",
          "key": 94,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 73,
      "options": undefined,
      "parentNode": [Circular],
      "type": "quote",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 96,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/e.gif",
              "key": 99,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 98,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
        Object {
          "children": Array [],
          "content": " Link with 2 images as link ",
          "key": 101,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/big/7b40.gif",
              "key": 103,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 102,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
      ],
      "content": "",
      "key": 97,
      "options": "http://fastpic.ru/10/0.png",
      "parentNode": [Circular],
      "type": "url",
    },
  ],
  "content": "",
  "key": 0,
  "options": undefined,
  "parentNode": Object {},
  "type": "root",
}
`;

exports[`BbCodePresenter parser parseTextToNodeTree with incorrect message (one redundant [/b] tag) should create expected object and does not include last root tag as text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "wrong/url.png",
          "key": 2,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 1,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 4,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://correct.url/content.png",
          "key": 6,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 5,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 8,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "https://correct.url/content.png",
          "key": 11,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 10,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 13,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "Link",
          "key": 16,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 15,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 18,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "https://path.to/some/image.png",
              "key": 21,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 20,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
      ],
      "content": "",
      "key": 19,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 24,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 26,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "red text",
              "key": 28,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 27,
          "options": "red",
          "parentNode": [Circular],
          "type": "color",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 30,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag 21",
              "key": 32,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 31,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 34,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in u tag",
              "key": 36,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 35,
          "options": undefined,
          "parentNode": [Circular],
          "type": "u",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 38,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 40,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag",
              "key": 42,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 41,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 44,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 25,
      "options": undefined,
      "parentNode": [Circular],
      "type": "U",
    },
    Object {
      "children": Array [],
      "content": " this text contains ",
      "key": 46,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [],
      "content": "[/b]",
      "key": 47,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [],
      "content": " that is a wrong tags ",
      "key": 48,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "some text[b]with other bbCodes[/b] in code tag",
          "key": 50,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 49,
      "options": "kto",
      "parentNode": [Circular],
      "type": "code",
    },
    Object {
      "children": Array [],
      "content": " text",
      "key": 52,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 53,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 55,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/e.gif",
          "key": 57,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 58,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/7.gif",
          "key": 60,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 61,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/c.gif",
          "key": 63,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 64,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/3.gif",
          "key": 66,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 56,
      "options": undefined,
      "parentNode": [Circular],
      "type": "img",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 68,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/2015/0.png",
          "key": 70,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 71,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/2015/0.gif ",
          "key": 73,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 69,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": " quote ",
          "key": 76,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": " and subQuote ",
              "key": 78,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "with ",
                  "key": 80,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "content": "some",
                      "key": 82,
                      "options": undefined,
                      "parentNode": [Circular],
                      "type": "textline",
                    },
                  ],
                  "content": "",
                  "key": 81,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "u",
                },
                Object {
                  "children": Array [],
                  "content": "tags",
                  "key": 84,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 79,
              "options": undefined,
              "parentNode": [Circular],
              "type": "i",
            },
            Object {
              "children": Array [],
              "content": " param",
              "key": 86,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 77,
          "options": "kto",
          "parentNode": [Circular],
          "type": "quote",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 88,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "some",
              "key": 90,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "other",
                  "key": 92,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 91,
              "options": undefined,
              "parentNode": [Circular],
              "type": "i",
            },
            Object {
              "children": Array [],
              "content": "text",
              "key": 94,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 89,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " with tags",
          "key": 96,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 75,
      "options": undefined,
      "parentNode": [Circular],
      "type": "quote",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 98,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/e.gif",
              "key": 101,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 100,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
        Object {
          "children": Array [],
          "content": " Link with 2 images as link ",
          "key": 103,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/big/7b40.gif",
              "key": 105,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 104,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
      ],
      "content": "",
      "key": 99,
      "options": "http://fastpic.ru/10/0.png",
      "parentNode": [Circular],
      "type": "url",
    },
  ],
  "content": "",
  "key": 0,
  "options": undefined,
  "parentNode": Object {},
  "type": "root",
}
`;

exports[`BbCodePresenter parser parseTextToNodeTree with incorrect message (one redundant [b] tag) should create expected object and does not include last root tag as text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "wrong/url.png",
          "key": 2,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 1,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 4,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://correct.url/content.png",
          "key": 6,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 5,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 8,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "https://correct.url/content.png",
          "key": 11,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 10,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 13,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "Link",
          "key": 16,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 15,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 18,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "https://path.to/some/image.png",
              "key": 21,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 20,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
      ],
      "content": "",
      "key": 19,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 24,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 26,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "red text",
              "key": 28,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 27,
          "options": "red",
          "parentNode": [Circular],
          "type": "color",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 30,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag 21",
              "key": 32,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 31,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 34,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in u tag",
              "key": 36,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 35,
          "options": undefined,
          "parentNode": [Circular],
          "type": "u",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 38,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 40,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag",
              "key": 42,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 41,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 44,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 25,
      "options": undefined,
      "parentNode": [Circular],
      "type": "U",
    },
    Object {
      "children": Array [],
      "content": " this text contains ",
      "key": 46,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": " that is a wrong tags ",
          "key": 48,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "some text[b]with other bbCodes[/b] in code tag",
              "key": 50,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 49,
          "options": "kto",
          "parentNode": [Circular],
          "type": "code",
        },
        Object {
          "children": Array [],
          "content": " text",
          "key": 52,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 53,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 55,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/big/e.gif",
              "key": 57,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [],
              "content": "",
              "key": 58,
              "options": undefined,
              "parentNode": [Circular],
              "type": "br",
            },
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/big/7.gif",
              "key": 60,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [],
              "content": "",
              "key": 61,
              "options": undefined,
              "parentNode": [Circular],
              "type": "br",
            },
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/big/c.gif",
              "key": 63,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [],
              "content": "",
              "key": 64,
              "options": undefined,
              "parentNode": [Circular],
              "type": "br",
            },
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/big/3.gif",
              "key": 66,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 56,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 68,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/2015/0.png",
              "key": 70,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [],
              "content": "",
              "key": 71,
              "options": undefined,
              "parentNode": [Circular],
              "type": "br",
            },
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/2015/0.gif ",
              "key": 73,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 69,
          "options": undefined,
          "parentNode": [Circular],
          "type": "url",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": " quote ",
              "key": 76,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": " and subQuote ",
                  "key": 78,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "content": "with ",
                      "key": 80,
                      "options": undefined,
                      "parentNode": [Circular],
                      "type": "textline",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [],
                          "content": "some",
                          "key": 82,
                          "options": undefined,
                          "parentNode": [Circular],
                          "type": "textline",
                        },
                      ],
                      "content": "",
                      "key": 81,
                      "options": undefined,
                      "parentNode": [Circular],
                      "type": "u",
                    },
                    Object {
                      "children": Array [],
                      "content": "tags",
                      "key": 84,
                      "options": undefined,
                      "parentNode": [Circular],
                      "type": "textline",
                    },
                  ],
                  "content": "",
                  "key": 79,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "i",
                },
                Object {
                  "children": Array [],
                  "content": " param",
                  "key": 86,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 77,
              "options": "kto",
              "parentNode": [Circular],
              "type": "quote",
            },
            Object {
              "children": Array [],
              "content": " ",
              "key": 88,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "some",
                  "key": 90,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "content": "other",
                      "key": 92,
                      "options": undefined,
                      "parentNode": [Circular],
                      "type": "textline",
                    },
                  ],
                  "content": "",
                  "key": 91,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "i",
                },
                Object {
                  "children": Array [],
                  "content": "text",
                  "key": 94,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 89,
              "options": undefined,
              "parentNode": [Circular],
              "type": "b",
            },
            Object {
              "children": Array [],
              "content": " with tags",
              "key": 96,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 75,
          "options": undefined,
          "parentNode": [Circular],
          "type": "quote",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 98,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "http://fastpic.ru/e.gif",
                  "key": 101,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 100,
              "options": undefined,
              "parentNode": [Circular],
              "type": "img",
            },
            Object {
              "children": Array [],
              "content": " Link with 2 images as link ",
              "key": 103,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "http://fastpic.ru/big/7b40.gif",
                  "key": 105,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 104,
              "options": undefined,
              "parentNode": [Circular],
              "type": "img",
            },
          ],
          "content": "",
          "key": 99,
          "options": "http://fastpic.ru/10/0.png",
          "parentNode": [Circular],
          "type": "url",
        },
      ],
      "content": "",
      "key": 47,
      "options": undefined,
      "parentNode": [Circular],
      "type": "b",
    },
  ],
  "content": "",
  "key": 0,
  "options": undefined,
  "parentNode": Object {},
  "type": "root",
}
`;

exports[`BbCodePresenter parser parseTextToNodeTree with wrong message that contained wrong tags should create expected object 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "wrong/url.png",
          "key": 2,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 1,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 4,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://correct.url/content.png",
          "key": 6,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 5,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 8,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "https://correct.url/content.png",
          "key": 11,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 10,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 13,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "Link",
          "key": 16,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 15,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 18,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "https://path.to/some/image.png",
              "key": 21,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 20,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
      ],
      "content": "",
      "key": 19,
      "options": "http://path.to/some/image.png",
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [],
      "content": " text ",
      "key": 24,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 26,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "red text",
              "key": 28,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 27,
          "options": "red",
          "parentNode": [Circular],
          "type": "color",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 30,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag 21",
              "key": 32,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 31,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 34,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in u tag",
              "key": 36,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 35,
          "options": undefined,
          "parentNode": [Circular],
          "type": "u",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 38,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "text in u tag ",
          "key": 40,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "text in b tag",
              "key": 42,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 41,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 44,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 25,
      "options": undefined,
      "parentNode": [Circular],
      "type": "U",
    },
    Object {
      "children": Array [],
      "content": " this here is wrong [tag] in code tag ",
      "key": 46,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "some text[b]with other bbCodes[/b] in code tag",
          "key": 48,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 47,
      "options": "kto",
      "parentNode": [Circular],
      "type": "code",
    },
    Object {
      "children": Array [],
      "content": " text",
      "key": 50,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [],
      "content": "",
      "key": 51,
      "options": undefined,
      "parentNode": [Circular],
      "type": "br",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 53,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/e.gif",
          "key": 55,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 56,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/7.gif",
          "key": 58,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 59,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/c.gif",
          "key": 61,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 62,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/big/3.gif",
          "key": 64,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 54,
      "options": undefined,
      "parentNode": [Circular],
      "type": "img",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 66,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/2015/0.png",
          "key": 68,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [],
          "content": "",
          "key": 69,
          "options": undefined,
          "parentNode": [Circular],
          "type": "br",
        },
        Object {
          "children": Array [],
          "content": "http://fastpic.ru/2015/0.gif ",
          "key": 71,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 67,
      "options": undefined,
      "parentNode": [Circular],
      "type": "url",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "content": " quote ",
          "key": 74,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": " and subQuote ",
              "key": 76,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "with ",
                  "key": 78,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [],
                      "content": "some",
                      "key": 80,
                      "options": undefined,
                      "parentNode": [Circular],
                      "type": "textline",
                    },
                  ],
                  "content": "",
                  "key": 79,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "u",
                },
                Object {
                  "children": Array [],
                  "content": "tags",
                  "key": 82,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 77,
              "options": undefined,
              "parentNode": [Circular],
              "type": "i",
            },
            Object {
              "children": Array [],
              "content": " param",
              "key": 84,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 75,
          "options": "kto",
          "parentNode": [Circular],
          "type": "quote",
        },
        Object {
          "children": Array [],
          "content": " ",
          "key": 86,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "some",
              "key": 88,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "content": "other",
                  "key": 90,
                  "options": undefined,
                  "parentNode": [Circular],
                  "type": "textline",
                },
              ],
              "content": "",
              "key": 89,
              "options": undefined,
              "parentNode": [Circular],
              "type": "i",
            },
            Object {
              "children": Array [],
              "content": "text",
              "key": 92,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 87,
          "options": undefined,
          "parentNode": [Circular],
          "type": "b",
        },
        Object {
          "children": Array [],
          "content": " with tags",
          "key": 94,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
      ],
      "content": "",
      "key": 73,
      "options": undefined,
      "parentNode": [Circular],
      "type": "quote",
    },
    Object {
      "children": Array [],
      "content": " ",
      "key": 96,
      "options": undefined,
      "parentNode": [Circular],
      "type": "textline",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/e.gif",
              "key": 99,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 98,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
        Object {
          "children": Array [],
          "content": " Link with 2 images as link ",
          "key": 101,
          "options": undefined,
          "parentNode": [Circular],
          "type": "textline",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "content": "http://fastpic.ru/big/7b40.gif",
              "key": 103,
              "options": undefined,
              "parentNode": [Circular],
              "type": "textline",
            },
          ],
          "content": "",
          "key": 102,
          "options": undefined,
          "parentNode": [Circular],
          "type": "img",
        },
      ],
      "content": "",
      "key": 97,
      "options": "http://fastpic.ru/10/0.png",
      "parentNode": [Circular],
      "type": "url",
    },
  ],
  "content": "",
  "key": 0,
  "options": undefined,
  "parentNode": Object {},
  "type": "root",
}
`;
